pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cpuhog
  name: cpuhog
spec:
  containers:
  - image: staranto/cpuhog
    name: cpuhog
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
