route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: route-cpuhog
  selfLink: /apis/route.openshift.io/v1/namespaces/k8s-demo/routes/route-cpuhog
spec:
  host: cpuhog.apps.ocp1.mysidlabs.com
  port:
    targetPort: 8080
  subdomain: ""
  to:
    kind: Service
    name: svc-cpuhog
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
