template-cpuhog.yml
apiVersion: v1
kind: Template
metadata:
  name: cpuhog-template
  annotations:
    description: "cpuhog load generator"
    tags: "ruby,demo"
objects:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: ${APP_NAME}
    name: ${APP_NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: ${APP_NAME}
        deploymentconfig: ${APP_NAME}
    strategy:
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: ${APP_NAME}
          deploymentconfig: ${APP_NAME}
      spec:
        containers:
        - image: ${IMG_SRC}:${IMG_TAG}
          imagePullPolicy: Always
          name: ${APP_NAME}
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            requests:
              cpu: 75m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
          timeoutSeconds: 2
        restartPolicy: Always
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APP_NAME}
    name: ${APP_NAME}
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ${APP_NAME}
      deploymentconfig: ${APP_NAME}
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    name: ${APP_NAME}
  spec:
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: ${APP_NAME}
    minReplicas: 2
    maxReplicas: 8 
    targetCPUUtilizationPercentage: 3 0
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: ${APP_NAME}
  spec:
    host: ""
    port:
      targetPort: 8080
    to:
      kind: Service
      name: ${APP_NAME}
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: ${APP_NAME}
  data:
    CPUHOG_PIDIGITS: ${PI_DIGITS}
    CPUHOG_MESSAGE: "Welcome to ${APP_NAME}!"

parameters:
- description: Instance unique name
  name: APP_NAME
  value: cpuhog
- description: Source Image
  name: IMG_SRC
  value: mysidlabs/cpuhog
- description: Source Image Tag
  name: IMG_TAG
  value: latest
- description: Number of digits of pi to calculate
  name: PI_DIGITS
  value: "1500"
- description: Custom message for application to return
  name: CPUHOG_MESSAGE
  value: This is an example message
labels:
  app_family: cpuhog
